Close Message Center on screen rotation

This CL adds the code to close the message center when the
root window bounds is changed. When the bound is changed,
the message center may be hidden by the edge of display
partially. This CL prevents such a bad state.

Bug: 813008
Change-Id: Ia2a2bbc319f759a8dd078a91f406e88f11235a17
Reviewed-on: https://chromium-review.googlesource.com/958049
Commit-Queue: Yoshiki Iguchi <yoshiki@chromium.org>
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#545373}
Former-commit-id: 70e505a2c6665ce1e28518422b85c3dde865ba62