ash/system/tray/tray_bubble_wrapper.cc
@@ -31,6 +31,8 @@ TrayBubbleWrapper::TrayBubbleWrapper(TrayBackgroundView* tray,
 
   tray->tray_event_filter()->AddWrapper(this);
 
+  bubble_widget_->GetNativeWindow()->GetRootWindow()->AddObserver(this);
+
   if (!is_persistent_)
     Shell::Get()->activation_client()->AddObserver(this);
 }
@@ -41,9 +43,17 @@ TrayBubbleWrapper::~TrayBubbleWrapper() {
 
   tray_->tray_event_filter()->RemoveWrapper(this);
   if (bubble_widget_) {
+    bubble_widget_->GetNativeWindow()->GetRootWindow()->RemoveObserver(this);
     bubble_widget_->RemoveObserver(this);
     bubble_widget_->Close();
   }
+}
+
+void TrayBubbleWrapper::OnWidgetClosing(views::Widget* widget) {
+  CHECK_EQ(bubble_widget_, widget);
+  // Remove this from the observer list before the widget is closed and detached
+  // from the root window.
+  bubble_widget_->GetNativeWindow()->GetRootWindow()->RemoveObserver(this);
 }
 
 void TrayBubbleWrapper::OnWidgetDestroying(views::Widget* widget) {
@@ -64,6 +74,13 @@ void TrayBubbleWrapper::OnWidgetBoundsChanged(views::Widget* widget,
                                               const gfx::Rect& new_bounds) {
   DCHECK_EQ(bubble_widget_, widget);
   tray_->BubbleResized(bubble_view_);
+}
+
+void TrayBubbleWrapper::OnWindowBoundsChanged(aura::Window* window,
+                                              const gfx::Rect& old_bounds,
+                                              const gfx::Rect& new_bounds,
+                                              ui::PropertyChangeReason reason) {
+  tray_->UpdateAfterRootWindowBoundsChange(old_bounds, new_bounds);
 }
 
 void TrayBubbleWrapper::OnWindowActivated(ActivationReason reason,
