ash/system/tray/tray_bubble_wrapper.h
@@ -7,6 +7,7 @@
 
 #include "ash/ash_export.h"
 #include "base/macros.h"
+#include "ui/aura/window_observer.h"
 #include "ui/views/widget/widget_observer.h"
 #include "ui/wm/public/activation_change_observer.h"
 
@@ -20,6 +21,7 @@ class TrayBackgroundView;
 // Creates and manages the Widget and EventFilter components of a bubble.
 
 class ASH_EXPORT TrayBubbleWrapper : public views::WidgetObserver,
+                                     public aura::WindowObserver,
                                      public ::wm::ActivationChangeObserver {
  public:
   TrayBubbleWrapper(TrayBackgroundView* tray,
@@ -28,9 +30,16 @@ class ASH_EXPORT TrayBubbleWrapper : public views::WidgetObserver,
   ~TrayBubbleWrapper() override;
 
   // views::WidgetObserver overrides:
+  void OnWidgetClosing(views::Widget* widget) override;
   void OnWidgetDestroying(views::Widget* widget) override;
   void OnWidgetBoundsChanged(views::Widget* widget,
                              const gfx::Rect& new_bounds) override;
+
+  // aura::WindowObserver:
+  void OnWindowBoundsChanged(aura::Window* window,
+                             const gfx::Rect& old_bounds,
+                             const gfx::Rect& new_bounds,
+                             ui::PropertyChangeReason reason) override;
 
   // ::wm::ActivationChangeObserver overrides:
   void OnWindowActivated(ActivationReason reason,
